--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+#################
+## Dart
+#################
+
 *.dart.js
 *.dart.js.map
+pubspec.lock
+packages/
 
 #################
 ## Eclipse
