added dependency to browser package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,8 @@
 name: dartflash
 version: 0.6.4
-description: >
- You are an Adobe Flash developer? Check out this package and see how easy
- it is to bring your Flash skills to DART and HTML5. The dartflash library
- provides the familiar Flash API - work with Sprites, Bitmaps, TextFields and
- even Sounds like you did with Flash before. Please visit www.dartflash.com
- for more information and demos.
 author: Bernhard Pichler <support@dartflash.com>
+description: You are an Adobe Flash developer? Check out this package and see how easy it is to bring your Flash skills to DART and HTML5. The dartflash library provides the familiar Flash API - work with Sprites, Bitmaps, TextFields and even Sounds like you did with Flash before. Please visit www.dartflash.com for more information and demos.
 homepage: http://www.dartflash.com
-
+dependencies:
+  browser: any
+  
