deprecated Sound.loadAudio, BitmapData.loadImage
new: Sound.load, BitmapData.load

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,3 +5,4 @@ description: A library for graphically rich content like games, based on the Fla
 homepage: http://www.dartflash.com
 dependencies:
   browser: any
+  meta: any
