--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: stagexl
-version: 0.7.3
-author: Bernhard Pichler <support@dartflash.com>
+version: 0.7.4
+author: Bernhard Pichler <support@stagexl.org>
 description: A library for graphically rich content like games, based on the Flash API.
 homepage: http://www.stagexl.org
 dependencies:
