--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,11 @@
 name: stagexl
-version: 0.8.7
+version: 0.8.8
 author: Bernhard Pichler <support@stagexl.org>
 description: A library for graphically rich content like games, based on the Flash API.
 homepage: http://www.stagexl.org
+environment:
+  sdk: '>=0.8.10+6 <2.0.0'
 dependencies:
-  browser: any
+  browser: '>=0.9.0 <0.10.0'
 dev_dependencies:
-  unittest: any
+  unittest: '>=0.9.0 <0.10.0'
