--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: stagexl
-version: 0.9.0+2
+version: 0.9.1
 author: Bernhard Pichler <support@stagexl.org>
 description: A library for graphically rich content like games, based on the Flash API.
 homepage: http://www.stagexl.org
 environment:
   sdk: '>=0.9.0 <2.0.0'
 dependencies:
-  browser: '>=0.9.0 <0.10.0'
+  browser: '>=0.9.0 <0.11.0'
 dev_dependencies:
-  unittest: '>=0.9.0 <0.10.0'
+  unittest: '>=0.9.0 <0.11.0'
