--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: stagexl
-version: 0.9.4
+version: 0.10.0-dev.1
 author: Bernhard Pichler <support@stagexl.org>
 description: A library for graphically rich content like games, based on the Flash API.
 homepage: http://www.stagexl.org
 environment:
-  sdk: '>=0.9.0 <2.0.0'
+  sdk: '>=0.1.6 <2.0.0'
 dependencies:
   browser: '>=0.9.0 <0.11.0'
 dev_dependencies:
