--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-# Don’t commit the following directories created by pub.
+.buildlog
+.DS_Store
+.idea
+.pub/
 build/
 packages
-
-# Or the files created by dart2js.
-*.dart.js
-*.dart.precompiled.js
-*.js_
-*.js.deps
-*.js.map
-
-# Include when developing application packages.
 pubspec.lock
-
-# IDE files
-.idea/
-*.iml
