--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ dart:
   - stable
   - dev
 with_content_shell: true
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script: pub run test -p content-shell
 
