--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: dart
-dart: ["stable", "dev"]
+dart:
+  - stable
+  - dev
 with_content_shell: true
-before_install: ["export DISPLAY=:99.0", "sh -e /etc/init.d/xvfb start"]
-script: pub run test test/all.dart -p content-shell
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+script:
+  - "pub run test -c test/all.dart -p content-shell"
+  - "dartanalyzer lib/stagexl.dart"
