--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: dart
 dart: ["stable", "dev"]
-sudo: false
 with_content_shell: true
+sudo: false
+
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
 script:
-  - "pub run test -p content-shell"
-  - "dartanalyzer lib/stagexl.dart"
+  - pub run test -p content-shell
+  - dartanalyzer lib/stagexl.dart
