--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: stagexl
-version: 0.12.0+1
+version: 0.13.0
 author: Bernhard Pichler <support@stagexl.org>
 description: A library for graphically rich content like games, based on the Flash API.
 homepage: http://www.stagexl.org
 environment:
-  sdk: '>=1.12.0 <2.0.0'
+  sdk: '>=1.13.0 <2.0.0'
 documentation: http://www.stagexl.org/docs/api/index.html
 dependencies:
   browser: any
