--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: stagexl
 version: 0.13.2
 author: Bernhard Pichler <support@stagexl.org>
-description: A library for graphically rich content like games, based on the Flash API.
+description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
 environment:
   sdk: '>=1.13.0 <2.0.0'
