--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ dart:
 - dev
 
 dart_task:
-- test: --platform dartium
+- test: --platform chrome
 - test: --platform firefox
+- test: --platform dartium
   install_dartium: true
 - dartanalyzer: --fatal-warnings lib/stagexl.dart
 
