--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,22 @@
 name: stagexl
-version: 1.2.0
+version: 1.3.0
 author: Bernhard Pichler <support@stagexl.org>
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
+
 environment:
   sdk: '>=1.21.0 <2.0.0'
+
 documentation: http://www.stagexl.org/docs/api/index.html
+
 dependencies:
   xml: any
+
 dev_dependencies:
   browser: any
   test: any
+
+web:
+  compiler:
+    debug: dartdevc
+
