--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ dart:
 
 dart_task:
 - test: --platform firefox
-- test: --platform dartium
-  install_dartium: true
 - dartanalyzer: --fatal-warnings lib/stagexl.dart
 
-
+matrix:
+  include:
+    - dart: stable
+    - dart_task:
+        test: --platform dartium
+        install_dartium: true
