--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
 
 environment:
-  sdk: '>=2.0.0-dev.36 <2.0.0'
+  sdk: '>=2.0.0-dev.64 <2.0.0'
 
 documentation: http://www.stagexl.org/docs/api/index.html
 
@@ -13,10 +13,4 @@ dependencies:
   xml: ^3.0.0
 
 dev_dependencies:
-  browser: any
-  test: any
-
-web:
-  compiler:
-    debug: dartdevc
-
+  test: ^1.0.0
