Added back test dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   xml: ^3.0.0
 
 dev_dependencies:
+  test: ^1.0.0
   build_test: ^0.10.2
   build_runner: ^0.8.10
   build_web_compilers: ^0.4.0+4
