--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: stagexl
-version: 1.4.0-dev
+version: 1.4.0
 author: Bernhard Pichler <support@stagexl.org>
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
 
 environment:
-  sdk: '>=2.0.0-dev.64 <2.0.0'
+  sdk: '>=2.0.0-dev.64 <3.0.0'
 
 documentation: http://www.stagexl.org/docs/api/index.html
 
@@ -15,5 +15,5 @@ dependencies:
 dev_dependencies:
   test: ^1.0.0
   build_test: ^0.10.2
-  build_runner: ^0.8.10
+  build_runner: ^0.9.0
   build_web_compilers: ^0.4.0+4
