--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: stagexl
-version: 1.4.0+2
+version: 1.4.0+3
 author: Bernhard Pichler <support@stagexl.org>
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
@@ -10,11 +10,11 @@ environment:
 documentation: http://www.stagexl.org/docs/api/index.html
 
 dependencies:
-  xml: ^3.0.0
+  xml: ^3.4.0
 
 dev_dependencies:
-  test: ^1.0.0
-  build_test: ^0.10.2
-  build_runner: ^1.0.0
-  build_web_compilers: ^0.4.0+4
-  pedantic: ^1.3.0
+  test: ^1.5.3
+  build_test: ^0.10.6
+  build_runner: ^1.2.8
+  build_web_compilers: ^1.2.0
+  pedantic: ^1.5.0
