--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: stagexl
-version: 1.4.3
-author: Bernhard Pichler <support@stagexl.org>
+version: 1.4.4
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
 
@@ -10,7 +9,7 @@ environment:
 documentation: http://www.stagexl.org/docs/api/index.html
 
 dependencies:
-  xml: ^3.6.0
+  xml: '>=3.6.0 <5.0.0'
 
 dev_dependencies:
   test: any
