--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
 name: stagexl
-version: 2.0.0-nullsafety.0
+version: 2.0.0
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
+repository: https://github.com/bp74/StageXL
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 documentation: http://www.stagexl.org/docs/api/index.html
 
 dependencies:
-  xml: '^5.0.0-nullsafety.1'
+  xml: ^5.0.0
 
 dev_dependencies:
   build_runner: any
