--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,83 +1,93 @@
-include: package:pedantic/analysis_options.yaml
+include: package:lints/recommended.yaml
 
 analyzer:
   strong-mode:
     implicit-casts: false
+
   errors:
-    unnecessary_getters_setters: ignore
-    unsafe_html: ignore
+    dead_code: error
+    unused_element: error
+    unused_import: error
+    unused_local_variable: error
+    avoid_function_literals_in_foreach_calls: ignore
+
+    # TODO: Review these lints
+    comment_references: ignore
+
+    # Does not seem to work correctly with null-safety
+    cancel_subscriptions: ignore
+
+    # Enable for StageXL 2.0
+    avoid_positional_boolean_parameters: ignore
+    constant_identifier_names: ignore
 
 linter:
   rules:
-    #- avoid_bool_literals_in_conditional_expressions
-    #- avoid_catching_errors
-    #- avoid_classes_with_only_static_members
-    #- avoid_function_literals_in_foreach_calls
-    - avoid_dynamic_calls
+    - depend_on_referenced_packages
+    - noop_primitive_operations
+    - use_named_constants
+    - null_check_on_nullable_type_parameter
+    - tighten_type_of_initializing_formals
+    - unnecessary_null_checks
+    - avoid_type_to_string
+    - unnecessary_nullable_for_final_variable_declarations
+    - avoid_returning_null_for_future
+    - invariant_booleans
+    - use_is_even_rather_than_modulo
+    - use_raw_strings
+    - use_setters_to_change_properties
+    - use_string_buffers
+    - void_checks
+    - cancel_subscriptions
+    - close_sinks
+    - comment_references
+    - literal_only_boolean_expressions
+    - no_adjacent_strings_in_list
+    - throw_in_finally
+    - unnecessary_statements
+    - always_put_required_named_parameters_first
+    - avoid_annotating_with_dynamic
+    - avoid_bool_literals_in_conditional_expressions
+    - avoid_catching_errors
+    - avoid_double_and_int_checks
+    - avoid_escaping_inner_quotes
+    - avoid_field_initializers_in_const_classes
+    - avoid_js_rounded_ints
+    - avoid_positional_boolean_parameters
     - avoid_private_typedef_functions
     - avoid_redundant_argument_values
     - avoid_renaming_method_parameters
-    - avoid_returning_null
-    - avoid_returning_null_for_future
-    - avoid_returning_null_for_void
     - avoid_returning_this
-    - avoid_single_cascade_in_expression_statements
+    - avoid_shadowing_type_parameters
+    - avoid_types_on_closure_parameters
     - avoid_unused_constructor_parameters
     - avoid_void_async
-    - await_only_futures
-    - camel_case_types
-    #- cancel_subscriptions
-    #- cascade_invocations
-    #- comment_references
-    #- constant_identifier_names
-    - control_flow_in_finally
-    - directives_ordering
-    - empty_statements
-    - file_names
-    - hash_and_equals
-    - implementation_imports
-    #- invariant_booleans
-    - iterable_contains_unrelated_type
     - join_return_with_assignment
-    #- lines_longer_than_80_chars
-    - list_remove_unrelated_type
-    - literal_only_boolean_expressions
+    - leading_newlines_in_multiline_strings
+    - library_private_types_in_public_api
     - missing_whitespace_between_adjacent_strings
-    - no_adjacent_strings_in_list
     - no_runtimeType_toString
-    - non_constant_identifier_names
     - omit_local_variable_types
-    #- only_throw_errors
-    - overridden_fields
-    - package_api_docs
-    - package_names
-    - package_prefixed_library_names
+    - only_throw_errors
     - prefer_asserts_in_initializer_lists
+    - prefer_asserts_with_message
     - prefer_const_constructors
+    - prefer_const_constructors_in_immutables
     - prefer_const_declarations
+    - prefer_constructors_over_static_methods
     - prefer_expression_function_bodies
-    - prefer_final_locals
-    - prefer_function_declarations_over_variables
-    - prefer_initializing_formals
-    - prefer_inlined_adds
-    #- prefer_interpolation_to_compose_strings
-    - prefer_is_not_operator
-    - prefer_null_aware_operators
-    - prefer_relative_imports
-    - prefer_typing_uninitialized_variables
-    - prefer_void_to_null
-    #- provide_deprecation_message
-    - sort_pub_dependencies
-    - test_types_in_equals
-    - throw_in_finally
+    - prefer_final_fields
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_int_literals
+    - prefer_interpolation_to_compose_strings
+    - prefer_iterable_whereType
+    - prefer_mixin
+    - prefer_single_quotes
+    - sort_unnamed_constructors_first
     - unnecessary_await_in_return
-    - unnecessary_brace_in_string_interps
-    #- unnecessary_getters_setters
     - unnecessary_lambdas
     - unnecessary_null_aware_assignments
-    - unnecessary_overrides
     - unnecessary_parenthesis
-    - unnecessary_statements
-    - unnecessary_string_interpolations
-    #- use_string_buffers
-    - void_checks
+    - unnecessary_raw_strings
+    - unawaited_futures
+    - avoid_dynamic_calls
