--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,6 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Setup XVFB
+        if: matrix.os == 'ubuntu-latest'
+        run: Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
@@ -39,4 +43,4 @@ jobs:
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
-        run: dart test
+        run: dart test -p chrome
