Support the latest pkg:xml, misc lint and language cleanup
Prepare for v2.1.2

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk: [stable, 2.16.1, 2.15.1, 2.14.4]
+        sdk: [stable, 2.18.2]
 
     steps:
       - uses: actions/checkout@v2
