Support the latest pkg:xml, misc lint and language cleanup
Prepare for v2.1.2

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,8 +1,8 @@
 include: package:lints/recommended.yaml
 
 analyzer:
-  strong-mode:
-    implicit-casts: false
+  language:
+    strict-casts: true
 
   errors:
     dead_code: error
@@ -23,50 +23,34 @@ analyzer:
 
 linter:
   rules:
-    - depend_on_referenced_packages
-    - noop_primitive_operations
-    - use_named_constants
-    - null_check_on_nullable_type_parameter
-    - tighten_type_of_initializing_formals
-    - unnecessary_null_checks
-    - avoid_type_to_string
-    - unnecessary_nullable_for_final_variable_declarations
-    - avoid_returning_null_for_future
-    - invariant_booleans
-    - use_is_even_rather_than_modulo
-    - use_raw_strings
-    - use_setters_to_change_properties
-    - use_string_buffers
-    - void_checks
-    - cancel_subscriptions
-    - close_sinks
-    - comment_references
-    - literal_only_boolean_expressions
-    - no_adjacent_strings_in_list
-    - throw_in_finally
-    - unnecessary_statements
     - always_put_required_named_parameters_first
     - avoid_annotating_with_dynamic
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catching_errors
     - avoid_double_and_int_checks
+    - avoid_dynamic_calls
     - avoid_escaping_inner_quotes
     - avoid_field_initializers_in_const_classes
     - avoid_js_rounded_ints
     - avoid_positional_boolean_parameters
     - avoid_private_typedef_functions
     - avoid_redundant_argument_values
-    - avoid_renaming_method_parameters
+    - avoid_returning_null_for_future
     - avoid_returning_this
-    - avoid_shadowing_type_parameters
+    - avoid_type_to_string
     - avoid_types_on_closure_parameters
     - avoid_unused_constructor_parameters
     - avoid_void_async
+    - cancel_subscriptions
+    - close_sinks
+    - comment_references
     - join_return_with_assignment
     - leading_newlines_in_multiline_strings
-    - library_private_types_in_public_api
+    - literal_only_boolean_expressions
     - missing_whitespace_between_adjacent_strings
+    - no_adjacent_strings_in_list
     - no_runtimeType_toString
+    - noop_primitive_operations
     - omit_local_variable_types
     - only_throw_errors
     - prefer_asserts_in_initializer_lists
@@ -76,18 +60,23 @@ linter:
     - prefer_const_declarations
     - prefer_constructors_over_static_methods
     - prefer_expression_function_bodies
-    - prefer_final_fields
     - prefer_if_elements_to_conditional_expressions
     - prefer_int_literals
-    - prefer_interpolation_to_compose_strings
-    - prefer_iterable_whereType
     - prefer_mixin
     - prefer_single_quotes
     - sort_unnamed_constructors_first
+    - throw_in_finally
+    - tighten_type_of_initializing_formals
+    - unawaited_futures
     - unnecessary_await_in_return
     - unnecessary_lambdas
-    - unnecessary_null_aware_assignments
+    - unnecessary_null_checks
     - unnecessary_parenthesis
     - unnecessary_raw_strings
-    - unawaited_futures
-    - avoid_dynamic_calls
+    - unnecessary_statements
+    - use_is_even_rather_than_modulo
+    - use_named_constants
+    - use_raw_strings
+    - use_setters_to_change_properties
+    - use_string_buffers
+    - use_super_parameters
