--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: stagexl
-version: 2.1.1
+version: 2.1.2
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
 repository: https://github.com/bp74/StageXL
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
 
 documentation: http://www.stagexl.org/docs/api/index.html
 
 dependencies:
-  xml: ^5.0.0
+  xml: '>=5.0.0 <7.0.0'
 
 dev_dependencies:
   build_runner: any
