Fix type, and update testing for newer dart sdk.

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk: [stable, 3.0.0]
+        sdk: [stable, 3.3, 3.2, 3.1]
 
     steps:
       - uses: actions/checkout@v2
