--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 documentation: http://www.stagexl.org/docs/api/index.html
 
 dependencies:
+  http: ^1.2.0
+  web: ^1.1.1
   xml: '>=6.3.0 <7.0.0'
 
 dev_dependencies:
