--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk: [stable, 3.3, 3.2, 3.1]
+        sdk: [stable,3.9, 3.6, 3.5, 3.4]
 
     steps:
       - uses: actions/checkout@v2
