--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,11 @@
 name: stagexl
-version: 2.3.0
+version: 2.3.1-wip
 description: A fast and universal 2D rendering engine for HTML5 and Dart.
 homepage: http://www.stagexl.org
 repository: https://github.com/bp74/StageXL
 
 environment:
   sdk: ^3.5.0
-
-documentation: http://www.stagexl.org/docs/api/index.html
 
 dependencies:
   http: ^1.2.0
